--- a/static/css/theme-mine.css
+++ b/static/css/theme-mine.css
@@ -7,10 +7,10 @@
     --MAIN-LINK-HOVER-color:#3f6d2c; /* Color of hovered links */
     --MAIN-ANCHOR-color: #599a3e; /* color of anchors on titles */
 
-    --MENU-HEADER-BG-color:#74b559; /* Background color of menu header */
+    --MENU-HEADER-BG-color:#E0E9EE; /* Background color of menu header */
     --MENU-HEADER-BORDER-color:#9cd484; /*Color of menu header border */ 
     
-    --MENU-SEARCH-BG-color:#599a3e; /* Search field background color (by default borders + icons) */
+    --MENU-SEARCH-BG-color:#ffffff; /* Search field background color (by default borders + icons) */
     --MENU-SEARCH-BOX-color: #84c767; /* Override search field border color */
     --MENU-SEARCH-BOX-ICONS-color: #c7f7c4; /* Override search field icons color */
 
@@ -19,7 +19,7 @@
     --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
     --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
     --MENU-SECTION-ACTIVE-CATEGORY-color: #777; /* Color of active category text */
-    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #fff; /* Color of background for the active category (only) */
+    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #DCDCDC; /* Color of background for the active category (only) */
 
     --MENU-VISITED-color: #599a3e; /* Color of 'page visited' icons in menu */
     --MENU-SECTION-HR-color: #18211c; /* Color of <hr> separator in menu */
